Updated Homepage link and finished Recipe 1

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -5,6 +5,27 @@
         <Title>Chicken Enchilada Casserole</Title>
     </head>
     <body>
-        
+        <img src="../img/ChickenCasserole.png" alt="Delicous Casserole" height="400" width="400">
+        <h2>Green Chili Enchilada Casserole</h2>
+
+        <ul> <strong>Ingredients</strong>
+            <li>Cooked chicken breasts</li>
+            <li>Sour Cream</li>
+            <li>Canned diced green chilis</li>
+            <li>Green chili enchilada sauce</li>
+            <li>Corn tortillas</li>
+            <li>Cream of chicken soup</li>
+            <li>Salt and pepper</li>
+        </ul>
+        <ol>
+            <strong>HOW TO MAKE CHICKEN ENCHILADAS</strong>
+            <li>Start by preheating your oven to 350 degrees F.</li>
+            <li>While the oven is heating up, mix together your filling. Add the cream of chicken soup, sour cream, some of the enchilada sauce, and a little salt and pepper to a mixing bowl. Then, add the diced or shredded chicken and green chilis and mix it all up.</li>
+            <li>Pour a little enchilada sauce in the bottom of your baking dish and spread it. You want the entire surface covered in sauce. After that, cover the saucy bottom with a few tortillas. I usually cut or tear one to fill in the gaps.</li>
+            <li>Spread one-third of the chicken mixture over the tortillas. Then pour some more enchilada sauce over the filling and cover with more tortillas. Repeat this process until you have three layers of chicken, sauce, and tortillas. Be sure to add a layer of cheese after your second layer of chicken and enchilada sauce. Like you’re building a lasagna!</li>
+            <li>Top the third layer of filling with more tortillas and the remaining enchilada sauce. You want to make sure to cover all the tortillas with sauce to keep them from drying out in the oven.</li>
+            <li>Sprinkle the remaining cheese all over the top of the casserole. Then bake it for about 30 minutes, or until the cheese is melted and the casserole is bubbling.</li>
+            <li>Take the casserole out of the oven, and let it rest for a few minutes after cooking. This will get you the cleanest slices when you go to serve it up. Add toppings as you wish and enjoy!</li>
+        </ol>
     </body>
 </html>
