--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </Head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/casserole.html">Chicken Enchilada Casserole</a>
+        <a href="recipes/casserole.html" target="_blank">Chicken Enchilada Casserole</a>
     </body>
 </html>
