last update to homepage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </Head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/casserole.html" target="_blank">Chicken Enchilada Casserole</a>
+        <ul>
+            <li><a href="recipes/casserole.html" target="_blank">Chicken Enchilada Casserole</a></li>
+            <li><a href="recipes/jambalaya.html" target="_blank">Jambalaya</a></li>
+            <li><a href="recipes/bananafoster.html" target="_blank">Banana Foster</a></li>
+        </ul>
     </body>
 </html>
